# Chromium

./: .gitignore  README.md  args.gn  generate_release.sh
patches/: 0001-use-64-bit-WebView-processes.patch  0002-switch-to-fstack-protector-strong.patch  0003-enable-fwrapv-in-Clang-for-non-UBSan-builds.patch  0004-enable-ftrivial-auto-var-init-zero.patch  0005-remove-Help-feedback-menu-entry.patch  0006-hide-passwords.google.com-link-when-not-supported.patch  0007-disable-first-run-welcome-page.patch  0008-disable-seed-based-field-trials.patch  0009-disable-navigation-error-correction-by-default.patch  0010-disable-contextual-search-by-default.patch  0011-disable-network-prediction-by-default.patch  0012-disable-metrics-by-default.patch  0013-disable-hyperlink-auditing-by-default.patch  0014-disable-showing-popular-sites-by-default.patch  0015-disable-article-suggestions-feature-by-default.patch  0016-disable-prefetching-suggested-pages-by-default.patch  0017-disable-content-feed-suggestions-by-default.patch  0018-disable-sensors-access-by-default.patch  0019-disable-third-party-cookies-by-default.patch  0020-disable-background-sync-by-default.patch  0021-disable-payment-support-by-default.patch  0022-disable-media-router-media-remoting-by-default.patch  0023-disable-media-router-by-default.patch  0024-disable-offering-translations-by-default.patch  0025-disable-browser-sign-in-feature-by-default.patch  0026-disable-browser-autologin-by-default.patch  0027-disable-safe-browsing-reporting-opt-in-by-default.patch  0028-disable-unused-safe-browsing-option-by-default.patch  (+31 more)
