target_os = "android"
# change to x64 for x86_64 targets
target_cpu = "arm64"

android_channel = "stable"
android_default_version_name = "81.0.4044.117"
android_default_version_code = "404411700"

is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 1
fieldtrial_testing_like_official_build = true

# enable patented codecs
ffmpeg_branding = "Chrome"
proprietary_codecs = true

is_cfi = true

enable_gvr_services = false
enable_remoting = false
enable_reporting = false

trichrome_certdigest = "54ee45548d202c50d6cfd50774343a5f8809b446d8efc8bee64743420ad75883"
